kube/infrastructure/http.network.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-http
  labels:
    app: wedding-http
spec:
  selector:
    app: wedding-http
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wedding-http
  annotations:
    kubernetes.io/ingress.global-static-ip-name: wedding-http
    networking.gke.io/managed-certificates: amatchmadeinkevin-com,www-amatchmadeinkevin-com
spec:
  backend:
    serviceName: wedding-http
    servicePort: 80
